--- a/style.css
+++ b/style.css
@@ -1,3 +1,100 @@
 @import url('https://fonts.googleapis.com/css2? family = Baloo + Da + 2: wght @ 400; 500 & family = Cairo: wght @ 200; 300 & family = Josefin + Laje: ital, peso @ 0,100; 0,200; 1,100; 1,200 & display = swap '); 
 
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+header{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+
+}
+
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0,0,0,0.8);
+}
+
+.img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: zoom 25s;
+}
+
+
+@keyframes zoom{
+    0%{
+        transform: scale(1.3);
+    }
+    100%{
+         transform: scale(1);
+    }
+}
+.banner{
+    position: absolute;
+    left: 13%;
+    top: 25%;
+}
+
+.banner h1{
+    color: #ffffff;
+    font-size: 3.5rem;
+    font-family: "Ballo Da 2", serif;
+    font-weight: 200;
+    text-shadow: .2rem .3rem 2px rgba(0,0,0,.4);
+    line-height: 3.5rem;
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
+}
+
+.banner p{
+    font-family: "Josefin Laje", serif;
+    color: #ffffff;
+    font-size: 2rem;
+    text-shadow: .2rem .2rem rgba(0,0,0,.4);
+    letter-spacing: .1rem; 
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
+}
+
+.banner button{
+    font-family: "Cairo", serif;
+    color: #ffffff;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    background: #DA22FF;  
+    background: -webkit-linear-gradient(to right, #9733EE, #DA22FF);  
+    background: linear-gradient(to left, #9733EE, #DA22FF); 
+    padding: 1rem 2rem; 
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;    
+    opacity: 0; 
+    animation: moveBanner 1s 0.9s forwards;
+}
+
+
+@keyframes moveBanner{
+    0%{
+        transform:translateY(10rem) rotateY(-30deg);
+    }
+    100%{
+         transform: translateY(0) rotateY(0deg);
+         opacity: 1;
+    }
+}
+
+.banner button:hover{
+    opacity: 0.8;
+    } 
